Connected Frontend&Backend(basic user info)

--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "Frontend"
+    }
+  },
+  "defaultProject": "Frontend",
+  "cli": {
+    "analytics": "055f6644-2f1b-418e-9e36-e59b93638ec4"
+  }
 }
